fixed dark mode

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -7,6 +7,38 @@ body {
   color: #333;
 }
 
+body.dark-mode {
+  background-color: #333;
+  color: #444;
+}
+
+body.dark-mode header,
+body.dark-mode footer,
+body.dark-mode .card {
+  background-color: #555;
+  color: #e9cba7;
+}
+
+body.dark-mode main {
+  background-color: #444;
+}
+
+body.dark-mode h2 {
+  color: whitesmoke;
+}
+
+body.dark-mode h3 {
+  color: whitesmoke;
+}
+
+body.dark-mode .button {
+  background-color: #3a5d24;
+}
+
+body.dark-mode a {
+  color: #e9cba7;
+}
+
 h1 {
   color: #fff;
 }
@@ -87,6 +119,53 @@ nav a {
   color: white;
   display: block;
   padding: 0px;
+}
+
+.switch {
+  position: absolute;
+  display: flex;
+  width: 60px;
+  height: 34px;
+  background-color: white;
+  border-radius: 20px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: relative;
+  display: flex;
+  cursor: pointer;
+  top: 10px;
+  left: 2px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.slider:before {
+  display: flex;
+  position: relative;
+  content: "🌙";
+  justify-content: center;
+  align-items: center;
+  height: 26px;
+  width: 26px;
+  top: -6px;
+  left: 2px;
+  background-color: #90a2b1;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  border-radius: 15px;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
 }
 
 #hamburgerMenu {
